# lan-clipboard-sync

./: .gitignore  .gitignore.build  ACKNOWLEDGMENTS.md  BUILD.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh
.github/workflows/: release.yml
installer/: QUICK_REF.md  README.sh
installer/linux/: config-template.toml
installer/linux/debian/: changelog  control  copyright  postinst
installer/windows/: config-template.toml  lan-clipboard-sync.iss
src/: clipboard.rs  config.rs  config_ui.rs  core.rs  crypto.rs  lib.rs  main.rs  network.rs  protocol.rs  tray.rs
tests/: integration_basic.rs
