[package]
name = "lan-clipboard-sync"
version = "0.1.0"
edition = "2021"
description = "A LAN clipboard synchronization tool supporting text, images, and files across Windows and Linux"
license = "MIT"
readme = "README.md"
repository = "https://github.com/user/lan-clipboard-sync"
keywords = ["clipboard", "sync", "lan", "network"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
clipboard-rs = "0.3"
chacha20poly1305 = { version = "0.10", features = ["std"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
chrono = "0.4"
tray-item = { version = "0.10", features = ["ksni"] }

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
